java 17/infinispan: start process with same classpath
alternative method to launch a JVM with the same classpath.

Infinispan tests fail with a java module error. Seems weird as owsi-core
master is already ok for java 17 runtime.